codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_completed_stream.snap
---
source: tui/src/pager_overlay.rs
expression: "buffer_to_text(&actual, area)"
---
/ T R A N S C R I P T · R E V I E W / /
first
last
~
~
~
───────────────────────────────── 100% ─
 ↑/↓ to scroll   pgup/pgdn to page
 q close   v detail   [ review prev
