codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_paginated_history_states.snap
---
source: tui/src/pager_overlay.rs
expression: snapshots
---
--- loading ---
/ T R A N S C R I P T · R E V I E W / / / / /  loading older history...
recent transcript
~
~
~
~
────────────────────────────────────────────────────────────────────────
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q close   v detail   [ review prev   ] review next

--- partial ---
/ T R A N S C R I P T · R E V I E W  partial history | PgUp for earlier
recent transcript
~
~
~
~
────────────────────────────────────────────────────────────────────────
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q close   v detail   [ review prev   ] review next

--- failed ---
/ T R A N S C R I P T · R E V I E W history unavailable | PgUp to retry
recent transcript
~
~
~
~
────────────────────────────────────────────────────────────────────────
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q close   v detail   [ review prev   ] review next

--- complete ---
/ T R A N S C R I P T · R E V I E W / / / / / / / / /  start of history
recent transcript
~
~
~
~
───────────────────────────────────────────────────────────────── 100% ─
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q close   v detail   [ review prev   ] review next
